infrastructure/k8s-oidc-discovery/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: k8s-oidc-discovery
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: k8s-oidc-discovery
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k8s-oidc-discovery-ingress
  namespace: k8s-oidc-discovery
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: k8s-oidc-discovery
      app.kubernetes.io/instance: k8s-oidc-discovery
      app.kubernetes.io/name: k8s-oidc-discovery
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8001"
              protocol: TCP
